--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1><b> Projets axés Open Data </b></h1>
+                    <h1><b> Projets axés sur l'Open Data </b></h1>
                     <br/><br/>
                     <p align="left"> De plus en plus de personnes, de cherchercheurs, d'entreprises s'interssent de plus en plus à l'Open Data. Plusieurs projets sont axés sur l'open data pour être leur matière première et d'autres leur produit final. </p>
                     <br/><br/>
@@ -686,11 +686,11 @@
             	<div class="col-lg-7">
             		<h3><b> DataCity Paris</b></h3>
             		<br/> <br/>
-            		<p align="left"> C'est un programme d’open-innovation qui entre dans le cadre de l’application de l’open data pour les smart cities. Il est créé par NUMA en partenariat avec la Ville de Paris. <br/>
-            	    NUMA est un réseau mondial de l'innovation dont l'objectif est de soutenir les entrepreneurs tech qui ont pour mission de répondre aux enjeux mondiaux de 2030. Il est présent dans 8 pays qui sont : la France, l'Allemagne, l'Espagne, la Russie, l'Inde, le Mexique, le Maroc, et  les États-Unis. <br/>
+            		<p align="left"> C'est un programme d’open-innovation qui entre dans le cadre de l’application de l’open data pour les smart cities. Il est créé par NUMA en partenariat avec la Ville de Paris. <br/><br/>
+            	    NUMA est un réseau mondial de l'innovation ayant pour objectif de soutenir les entrepreneurs tech. Il est présent dans 8 pays qui sont : la France, l'Allemagne, l'Espagne, la Russie, l'Inde, le Mexique, le Maroc, et  les États-Unis. <br/>
 
 
-            			<br/>Ce projet réunit les acteurs industriels, les startups et autorités locales. Son principe est d'utiliser les données Open Data de la ville de Paris privées et publiques afin de produire et d’inventer des solutions innovantes aux problématiques de la ville liées à l’environnement urbain (comme la gestion des déchets , l’énergie , la mobilité ...) afin d’améliorer la vie des citoyens. </p>
+            			<br/>Ce projet réunit les acteurs industriels, les startups et autorités locales. Son principe est d'utiliser les données Open Data de la ville de Paris privées et publiques afin de produire et d’inventer des solutions innovantes aux différents problématiques liées à l’environnement urbain comme à titre d'exemple la gestion des déchets , l’énergie et la mobilité, et ce afin d’améliorer la vie des habitants de la ville de Paris. </p>
             	</div>
             	<div class="col-lg-5">
             		<br/> <br/><br/> <br/>
@@ -702,18 +702,21 @@
 
             <div class="row">
             	<div class="col-lg-5">
-            		<br/> <br/> <br/>
+            		<br/> <br/> <br/><br/> <br/>
             		<img src="images\handisco.png" , align="center" , width="180" , height="300" >        
             	</div> 
             	<div class="col-lg-7">
             		<h3><b> Projet Handisco Nancy </b></h3>
             		<br/> <br/>
             		<p align="left"> 
-            			<b> Présentation de la startup </b>
-            			Un boîtier équipé d'un GPS s'installe sur la canne blanche ou le harnais. Véritable assistant connecté, Sherpa peut ainsi guider son utilisateur vers l'arrêt de bus à proximité, lui préciser les destinations desservies ainsi que l'horaire des prochains passages via une oreillette Bluetooth. > "Grâce aux données ouvertes des transports publics, nous avons pu intégrer plus d'une quarantaine de métropoles dans notre service" explique le fondateur d'Handisco.
-						 »Handisco imagine à terme pouvoir intégrer d'autres sources de données, comme par exemple les zones de travaux qui constituent des obstacles importants pour la mobilité des déficients visuels.
-						Perspective d’amélioration est de fournir non pas les horaire théorique mais les horaire en temps réel en cas d ’existance de perturbations
-						Aujourd'hui, seuls les horaires théoriques sont proposés via Sherpa. "Chaque réseau de transport propose sa propre interface pour accéder aux données en temps réel. Bien sûr cela serait plus intéressant pour nos utilisateurs en cas de perturbations, mais nous ne pouvons pas pour le moment réaliser des développements spécifiques pour chaque réseau_" poursuit Mathieu Chevalier. Faciliter la réutilisation en proposant une plateforme unifiée de données de transport, c'est justement l'ambition de transport.data.gouv.fr qui est actuellement en cours de développement au sein de l'incubateur des services numériques de la DINSIC. "C'est une très bonne nouvelle pour nous, surtout si cela nous permet d'avoir une seule interface (API) pour plusieurs réseaux"..</p>
+            			Handisco est une startup créée par deux élèves ingénieurs lors de leurs études à Nancy. Une idée était d'inventer un dispositif assurant un service innovant qui peut aider les personnes malvoyantes à circuler via les transport en commun.
+            			<br/><br/> 
+            			Ce dispositif est un objet connecté nommé Sherpa, qui est un boîtier équipé d'un GPS qui se fixe sur la canne blanche des malvoyants, assurant une assitance guidantson utilisateur vers l'arrêt de bus à proximité, lui précisant les destinations desservies ainsi que l'horaire des prochains passages, et ce via une oreillette Bluetooth. <br/><br/> 
+
+            			Le fonctionnement de cedispositif repose sur  les données ouvertes des transports publics. Plus d'une quarantaine de métropoles ayant ces données integrées dans le fonctionnement de ce système. <br/><br/> 
+						 Comme vision future, Handisco compte intégrer d'autres sources de données, comme à titre d'exemple les zones de travaux pouvant constituer des obstacles pour la mobilité des déficients visuels. <br/>
+						Une autre perspective d’amélioration est aussi de fournir  les horaire en temps réel et non pas les horaires théoriques, ce qui est bien avantageux en cas d ’existance de perturbations. <br/>
+					</p>
             	</div>
            	
             </div>
