--- a/index.html
+++ b/index.html
@@ -728,13 +728,14 @@
 
             <div class="row">
             	<div class="col-lg-7">
-            		<h3><b> « Where does my money go? » UK</b></h3>
             		<br/> <br/>
-            		<p align="left">C'est un projet élaboré par l' <b> Open Knowledge Foundation </b> qui est une association à but non lucratif de droit britannique promouvant la culture libre, en particulier les contenus libres et l'open data. Elle a été créée le 24 mai 2004 à Cambridge au Royaume-Uni. <br/> Ce projet a pour but principal de permettre aux citoyens de voir d'une manière détaillée la dépense de leurs taxes par l'état, et sa répartition entre les différentes structures gouvernementales.
+            		<h3><b> « Where does my money go? »</b></h3>
+            		<br/> <br/>
+            		<p align="left">C'est un projet élaboré aux royaume uni par l' <b> Open Knowledge Foundation </b> qui est une association à but non lucratif de droit britannique promouvant la culture libre, et en particulier les contenus libres et l'open data. Cette association a été créée le 24 mai 2004 à Cambridge au Royaume-Uni. <br/> <br/> Ce projet a pour but principal de permettre aux citoyens de voir d'une manière détaillée la dépense de leurs taxes par l'état, et sa répartition entre les différentes structures gouvernementales.
  					</p>
             	</div>
             	<div class="col-lg-5">
-            		<br/> <br/>
+            		<br/> <br/><br/> 
             	     <img src="images\moneygo.png" , align="center" , width="200" , height="200" >        
             	</div>            	
         
