--- a/index.html
+++ b/index.html
@@ -784,10 +784,10 @@
 
             <div class="row">
             	<div class="col-lg-7">
-            		<h3><b> Cityzenith: startup Open Data des Smart Cities</b></h3>
+            		<h3><b> Cityzenith : startup Open Data des Smart Cities</b></h3>
             		<br/> <br/>
-            		<p align="left"> Baseé à Chicago, la startup Cityzenith fut fondée en 2009 par Michael Jansen. Elle est à l’origine de la première plateforme mondiale de visualisation de données, mais aussi de diverses applications pour l’internet des objets et les Smart Cities. Sa plateforme 5D Smart City permet aux gouvernements locaux, aux entreprises et aux citoyens d’accéder aux données ouvertes, aux données IoT, aux données M2M et aux données des réseaux sociaux produites par les villes. 
-            		<br/> Cette plateforme est notamment utilisée par Barcelone, Amsterdam, San Francisco, Chicago, Londres et Singapour. Basée sur le cloud, elle cartographie les données générées par les grandes villes sous forme d’interface interactive en 3D. 5D Smart City a été créée par Remi Arnaud, anciennement développeur en chef de Google Earth. Depuis 2009, Cityzenith a levé 6 millions de dollars.</p>
+            		<p align="left"> Cityzenith est une startup aseé à Chicago, fondée en 2009 par Michael Jansen. Elle est à l’origine de la première plateforme mondiale de visualisation de données, mais aussi de diverses applications pour l’internet des objets et les Smart Cities. <br/><br/> Elle a développé une plateforme intitulée "5D Smart City" permet aux gouvernements locaux, aux entreprises et aux citoyens d’accéder aux données ouvertes, aux données IoT, et aux données des réseaux sociaux produites par les villes. 
+            		<br/> Etant basée sur le cloud, cette plateforme cartographie les données générées par les grandes villes sous forme d’interface interactive en 3D. </p>
             	</div>
             	<div class="col-lg-5">
             		<br/> <br/><br/><br/><br/><br/>
@@ -798,11 +798,12 @@
 
             <div class="row">
             	<div class="col-lg-5">
-            		<br/> <br/><br/><br/><br/><br/>
+            		<br/> <br/><br/><br/><br/><br/><br/> <br/><br/> 
             		<img src="images\opengov.png" , align="center" , width="350" , height="100" >        
             	</div> 
             	<div class="col-lg-7">
-            		<h3><b> OpenGov, une startup Open Data dédiée aux gouvernements</b></h3>
+            		<br/> <br/>
+            		<h3><b> OpenGov : startup Open Data dédiée aux gouvernements</b></h3>
             		<br/> <br/>
             		<p align="left"> Fondée en 2012 par Joe Lonsdale, Nate Levine, Zac Bookman et Mike Rosengarten, OpenGov est une startup à l’origine d’un logiciel cloud permettant de visualiser les données financières municipales. Elle offre aux gouvernements l’opportunité d’accéder, d’analyser et de partager ces données. Il s’agit de la première solution cloud intégrée pour la mise en place de budget pour le secteur public. Elle est utilisée par plus 1300 agences publiques au sein du réseau OpenGov Network. Sa technologie novatrice simplifie le processus de mise en place de budget, améliore les résultats, et permet de renforcer la confiance du public. Cette plateforme est utilisée par de nombreux gouvernements, notamment aux Etats-Unis. Au total, depuis sa création, elle a levé 47 millions de dollars en quatre levées de fonds. Les principaux investisseurs de OpenGov sont Andreessen Horowitz, 8VC, and Thrive Capital.</p>
             	</div>
@@ -812,13 +813,14 @@
 
             <div class="row">
             	<div class="col-lg-7">
-            		<h3><b> DueDil, une startup Open Data regroupant des informations sur les entreprises privées</b></h3>
+            		<br/> <br/>
+            		<h3><b> DueDil : startup Open Data regroupant des informations sur les entreprises privées</b></h3>
             		<br/> <br/>
             		<p align="left"> La startup DueDil, fondée en en 2011 par Damian Kimmelman, basée à Londres, développe une base de données en ligne gratuite regroupant des informations sur les entreprises. Il s’agit de la plus grande source d’informations sur les entreprises privées au Royaume-Uni et en Irlande. Elle permet d’identifier et de comparer des clients et des fournisseurs potentiels. Grâce à cet outil, les entreprises peuvent également cibler des opportunités potentielles d’investissement, mesurer les performances et les perspectives de croissance des entreprises, vérifier la solvabilité de leurs partenaires, surveiller discrètement leurs concurrents et bien plus encore.
             			<br/> Cette startup a été récompensée par deux Guardian Digital Innovation Awards en 2012, a été finaliste du TechCrunch Europas, a remporté la compétition de startups GeeknRoola, et a été mise en lumière par des publications de prestige comme le Telegraph, TechCrunch, Wired, The Guardian, GigaOm ou encore le Wall Stree Journal. Depuis sa fondation, la startup a levé 22 millions de dollars en 5 levées de fonds auprès de huit investisseurs. Elle est notamment soutenue par Passion Capital, Jonty Hurwitz, Federico Pirzio-Biroli, Sherry Coutu, etTom Hulme. </p>
             	</div>
             	<div class="col-lg-5">
-            		<br/> <br/><br/> <br/><br/><br/>
+            		<br/> <br/><br/> <br/><br/><br/><br/> <br/>
             		<img src="images\duedil.png" , align="center" , width="350" , height="100" >        
             	</div>            	
             </div>           
