--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
                     <li>
                         <a class="page-scroll" href="#startup"> Startups Open Data  </a>
                     </li>
-                    <li>
+                <!--    <li>
                         <a class="page-scroll" href="#contact"> Contact </a>
-                    </li>                
+                    </li> 
+                -->                   
                 </ul>
             </div>	<!-- .navbar-collapse -->
         </div>		<!-- .container -->
@@ -840,49 +841,21 @@
         </div>
     </section>
 
+<!-- Contact
      <section id="contact" class="whatwedo-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                   
+                <div class="col-lg-6">
+                   <p> </p>
                 </div>
             </div>
         </div>
     </section>
 
+-->
 
 
 
-<!--
-derniere section 
-        <section id="derniere" class="whatwedo-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Le Phénomène Open Data</h1>
-					<p>A back to top arrow fades in as the user starts scrolling down the page which takes back to the welcome screen with one click.</p>
-					<p>You can edit and publish this template but please leave a reference to <a href="http://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a>. Thank You!</p>
-					<p>&nbsp;</p>
-                    <a class="btn btn-primary page-scroll" href="#about">Click To Scroll Down!</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    <h1>Image</h1>
-                    <img src="C:\Users\ADMIN\Documents\GitHub\OpenData\images\image1.PNG" , width="300" , height="300" >
-					<p>A back to top arrow fades in as the user starts scrolling down the pag which takes back to the welcome screen with one click.</p>
-					<p>You can edit and publish this template but please leave a reference to <a href="http://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a>. Thank You!</p>
-                    <a class="btn btn-primary page-scroll" href="#about">Click To Scroll Down!</a>
-                </div>
-                <div class="col-lg-8">
-                    <h1>Problématique</h1>
-					<p>A back to top arrow fades in as the user starts scrolling down the page which takes back to the welcome screen with one click.</p>
-					<p>You can edit and publish this template but please leave a reference to <a href="http://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a>. Thank You!</p>
-                    <a class="btn btn-primary page-scroll" href="#about">Click To Scroll Down!</a>
-                </div>                
-            </div>                                                 
-        </div>
-    </section> -->
 	<a id="back2Top" title="Back to top" href="#">&#10148;</a>
 	
     <!-- jQuery -->
